--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,36 @@
+11-01-30 Benjamin Niediek  <ben(at)channel-eight.de>
+
+	* Fixed TCA-settings for TYPO3 4.5
+
+10-07-17 Benjamin Niediek  <ben(at)channel-eight.de>
+
+	* Changed CSS for a more convenient handling of the presentation mode
+	* Modified Lightbox/Slimbox-Scripts slightly (Cosmetic changes)
+
+10-06-28 Benjamin Niediek  <ben(at)channel-eight.de>
+
+	* Added keycode to toggle slideshow on/off (again)
+
+10-06-22 Benjamin Niediek  <ben(at)channel-eight.de>
+
+	* Compressed versions of Prototype 1.6.1(YUI), MooTools 1.2.4(YUI) and Jquery 1.4.2(MIN) added
+	* YUI-Compressed versions of Lightbox 2.0.4, Slimbox 1.7.1 and Slimbox 2.0.4 added
+	* Updated Typoscript
+	* Updated documentation
+	
+10-06-22 Benjamin Niediek  <ben(at)channel-eight.de>
+
+	* Javascripts rewritten from scratch. Based on the most recent scripts of Lightbox&Slimbox (Slimbox 2.0.4, Slimbox 1.7.1, Lightbox 2.04) and the corresponding frameworks (Jquery 1.4.2, Mootools 1.2.4, Prototype 1.6.1/Scriptaculous 1.8.3)
+	* Optimized Typoscripts and CSS
+	* Removed the option "animate" for Lightbox. You can set resizeSpeed to 0 for a similar effect
+	* Added an option to put the JS/CSS in the <body> for speed optimization (experimental)
+
+08-08-22 Benjamin Niediek  <ben(at)channel-eight.de>
+
+	* Perfect Lightbox should now FLAWLESSY support tt_news! (Thanks to Claus Helfenschneider for giving me the idea)
+	* Added dutch translation (Again, thanks to Claus)
+	* Updated documentation
+
 08-03-30 Benjamin Niediek  <ben(at)channel-eight.de>
 
 	* Fixed small problems with tt_news-integration (with firstImageIsPreview and/or forceFirstImageIsPreview set). No confusion with the imagecaptions anymore! (Thanks to Steffen Thierock for this hint)
